--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale: "en-US"
-title: "Chaoqun Du"
+title: "Home"
 title_separator: "-"
 name: &name "Your Name"
 description: &description "personal description"
@@ -21,34 +21,34 @@ repository: "Andy-Du20/Andy-Du20.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar: "profile.png"
+  avatar: "profile.jpg"
   name: "Chaoqun Du"
   pronouns: # example: "she/her"
-  bio: "Short biography for the left-hand sidebar"
-  location: "Earth"
-  employer: "Red Brick University"
+  bio: ""
+  location: "Beijing, China"
+  employer: "Tsinghua University"
   uri: # URL
-  email: "none@example.org"
+  email: "dcq20@mails.tsinghua.edu.cn"
 
   # Academic websites
-  arxiv: # URL - Update with the correct link to your profile
-  googlescholar: "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory: # URL
-  orcid: "http://orcid.org/yourorcidurl"
-  semantic: # URL
-  pubmed: "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate: # URL
+  #arxiv: # URL - Update with the correct link to your profile
+  googlescholar: "https://scholar.google.com/citations?user=0PSKJuYAAAAJ"
+  #impactstory: # URL
+  #orcid: "http://orcid.org/yourorcidurl"
+  #semantic: # URL
+  #pubmed: "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #researchgate: # URL
 
   # Repositories and software development
   bitbucket: # Username - Update with your username on the site
   codepen: # Username
   dribbble: # Username
-  github: "academicpages"
+  github: "Andy-Du20"
   kaggle: # Username
   stackoverflow: # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
 
   # Social media
-  bluesky: "bsky.app" # Replace this with you Bluesky username
+  bluesky: #"bsky.app" # Replace this with you Bluesky username
   facebook: # Username
   flickr: # Username
   foursquare: # Username
